kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cake-company-frontend
spec:
  selector:
    app: cake-company
    tier: frontend
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: cake-company-backend
spec:
  selector:
    app: cake-company
    tier: backend
  ports:
  - port: 5000
    targetPort: 5000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: cake-company-redis
spec:
  selector:
    app: cake-company
    tier: cache
  ports:
  - port: 6379
    targetPort: 6379
  type: ClusterIP
